# clay

./: .gitignore  .htaccess  .travis.yml  CHANGELOG  CONTRIBUTING.md  LICENSE  Main.hs  README  README.md  Render.hs  all-ghcs.nix  cabal.project  clay.cabal  clay.nix  code.html  code.js  default.nix  flake.nix  hackage-docs.sh  index.html  monitor-and-run-tests.sh  release.nix  shell.nix  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack.yaml  style-compact.css  style-pretty.css  style.css  todo  todo.md
.github/workflows/: ci.yml  stale.yml
examples/: Main.hs  Test.hs  examples.cabal  generate.sh  main.html
nix/: clay.nix  nixpkgs.nix
site/: .htaccess  Main.hs  code.js  example.hs  example.html  generate.sh  site.html  style.css  style.lhs
site/example/: Main.hs  generate.sh  style.css
spec/: Common.hs  Spec.hs
spec/Clay/: BoxSpec.hs  ColorSpec.hs  FlexboxSpec.hs  FontSpec.hs  GeometrySpec.hs  GridSpec.hs  MediaSpec.hs  PositionSpec.hs  PseudoSpec.hs  RenderSpec.hs  SelectorSpec.hs  SizeSpec.hs  TextSpec.hs  TransitionSpec.hs
src/: Background.hs  Clay.hs  Code.hs  Color.hs  Common.hs  Element.hs  Html.hs  Main.hs  Property.hs  Render.hs  Rule.hs  Rules.hs  Sections.hs  Selector.hs  Size.hs  Style.hs  Test.hs  about.html  code.html  code.js  doc-1.hs  doc-nesting.html.hs  doc-nostrings.html.hs  doc-questionmark.html.hs  documentation.html  example.hs  features.html  first-step.hs  generate-loop.sh  generate.sh  haskell.html  header.html  index.html  install.html  source.html  usage.clay.hs
src/Clay/: Animation.hs  Attributes.hs  Background.hs  Border.hs  Box.hs  Color.hs  Comments.hs  Common.hs  Display.hs  Dynamic.hs  Elements.hs  Filter.hs  Flexbox.hs  Font.hs  FontFace.hs  Geometry.hs  Gradient.hs  Grid.hs  List.hs  Mask.hs  Media.hs  Property.hs  Pseudo.hs  Render.hs  Rule.hs  Selector.hs  Selectors.hs  Size.hs  Stylesheet.hs  Text.hs  Time.hs  Transform.hs  Transition.hs
src/Clay/Core/: Property.hs  Render.hs  Rule.hs  Selector.hs
src/Clay/Style/: Attributes.hs  Background.hs  Border.hs  Color.hs  Common.hs  Display.hs  Elements.hs  Font.hs  Geometry.hs  Html.hs  Properties.hs  Selectors.hs  Size.hs
src/include/: about.html  features.html  footer.html  ga.html  header.html  install.html  meta.html  source.html  typekit.html
src/snippet/: example.hs
src/src/: code.js
src/style/: Codeblock.hs  Common.hs  Header.hs  Main.hs
src/tutorial/: advanced.clay.hs  escape.clay.hs  overloadedstrings.clay.hs  prefixes.clay.hs  selectors.clay.hs  tutorial.html
