Name:     clay
Version:  0.10.1
Synopsis: CSS preprocessor as embedded Haskell.
Description:
  Clay is a CSS preprocessor like LESS and Sass, but implemented as an embedded
  domain specific language (EDSL) in Haskell. This means that all CSS selectors
  and style rules are first class Haskell functions, which makes reuse and
  composability easy.
  .
  The project is described on <http://fvisser.nl/clay>.
  .
  The API documentation can be found in the top level module "Clay".
  .
  > 0.10 -> 0.10.1
  > - Expose a render function for single selectors.
  > - Added super for vertical-align.
  > - Added support for border-collapse.
  > - Allow initial for the content property.
  > - Added support for CSS import.
  > Thanks to Heather, Collin J. Doering, Fraser Murray and Jonathan Fischoff.


Author:        Sebastiaan Visser
Maintainer:    Sebastiaan Visser <code@fvisser.nl>
Homepage:      http://fvisser.nl/clay
Bug-Reports:   http://github.com/sebastiaanvisser/clay/issues

License:       BSD3
License-File:  LICENSE
Category:      Web, Graphics
Cabal-Version: >= 1.8
Build-Type:    Simple

Source-Repository head
  Type:     git
  Location: git://github.com/sebastiaanvisser/clay.git

Library
  HS-Source-Dirs: src

  Exposed-Modules:
    Clay
    Clay.Animation
    Clay.Attributes
    Clay.Background
    Clay.Border
    Clay.Box
    Clay.Color
    Clay.Common
    Clay.Dynamic
    Clay.Display
    Clay.Elements
    Clay.Filter
    Clay.Font
    Clay.FontFace
    Clay.Geometry
    Clay.Gradient
    Clay.List
    Clay.Media
    Clay.Mask
    Clay.Property
    Clay.Pseudo
    Clay.Render
    Clay.Selector
    Clay.Size
    Clay.Stylesheet
    Clay.Text
    Clay.Time
    Clay.Transform
    Clay.Transition

  GHC-Options: -Wall
  Build-Depends:
    base  >= 4    && < 5,
    mtl   >= 1    && < 2.3,
    text  >= 0.11 && < 1.3

Test-Suite Test-Clay
  Type: exitcode-stdio-1.0
  HS-Source-Dirs: src
  Main-Is: Test.hs
  Build-Depends:
    base                 >= 4    && < 5,
    mtl                  >= 1    && < 2.3,
    text                 >= 0.11 && < 1.3,
    HUnit                >= 1.2  && < 1.3,
    test-framework       >= 0.8  && < 0.9,
    test-framework-hunit >= 0.3  && < 0.4
  Ghc-Options: -Wall

