Name:     clay
Version:  0.14.0
Synopsis: CSS preprocessor as embedded Haskell.
Description:
  Clay is a CSS preprocessor like LESS and Sass, but implemented as an embedded
  domain specific language (EDSL) in Haskell. This means that all CSS selectors
  and style rules are first class Haskell functions, which makes reuse and
  composability easy.
  .
  The project is described on <http://fvisser.nl/clay>.
  .
  The API documentation can be found in the top level module "Clay".


Author:        Sebastiaan Visser
Maintainer:    Sebastiaan Visser <code@fvisser.nl>
Homepage:      http://fvisser.nl/clay
Bug-Reports:   http://github.com/sebastiaanvisser/clay/issues

License:       BSD3
License-File:  LICENSE
Category:      Web, Graphics
Cabal-Version: >= 1.10
Build-Type:    Simple

Extra-Source-Files:
  README.md CHANGELOG CONTRIBUTING.md

Tested-With:
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.4,
  GHC==8.10.7,
  GHC==9.0.2

Source-Repository head
  Type:     git
  Location: git://github.com/sebastiaanvisser/clay.git

Library
  HS-Source-Dirs: src

  Exposed-Modules:
    Clay
    Clay.Animation
    Clay.Attributes
    Clay.Background
    Clay.Border
    Clay.Box
    Clay.Color
    Clay.Comments
    Clay.Common
    Clay.Dynamic
    Clay.Display
    Clay.Elements
    Clay.Filter
    Clay.Flexbox
    Clay.Font
    Clay.FontFace
    Clay.Geometry
    Clay.Gradient
    Clay.Grid
    Clay.List
    Clay.Media
    Clay.Mask
    Clay.Property
    Clay.Pseudo
    Clay.Render
    Clay.Selector
    Clay.Size
    Clay.Stylesheet
    Clay.Text
    Clay.Time
    Clay.Transform
    Clay.Transition

  Build-Depends:
    base  >= 4.11 && < 4.16,
    mtl   >= 1,
    text  >= 0.11
  GHC-Options: -Wall -Wcompat
  Default-Language: Haskell2010

Test-Suite Test-Clay
  Type: exitcode-stdio-1.0
  HS-Source-Dirs: spec, src
  Build-Tools: hspec-discover
  main-is: Spec.hs
  Build-Depends:
    base                 >= 4.11  && < 4.16,
    mtl                  >= 1,
    text                 >= 0.11,
    hspec                >= 2.2.0,
    hspec-discover       >= 2.2.0
  GHC-Options: -Wall -Wcompat
  Default-Language: Haskell2010
